[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rppal = "0.14.1"
rocket = "0.5.0-rc.2"
image = "0.24.5"
num = "0.4.0"
palette = "0.6.1"
num_cpus = "1.15.0"
nalgebra = "0.31.4"
